package project;


public interface CellListener {
    void cellChanged(Cell cell);
}
